# lagpi

./: .gitignore  CMakeLists.txt  README.md
src/: LoadShaders.cpp  LoadShaders.h  lagpi.cpp  simplefragshader.glsl  text.c  text.h
